# rust-par-examples

./: Cargo.toml
rust_rayon_matrix/: Cargo.toml
rust_rayon_matrix/src/: main.rs
rust_web_client/: Cargo.toml
rust_web_client/src/: main.rs
rust_web_servers/: Cargo.toml  justfile
rust_web_servers/src/: lib.rs  main.rs
