[package]
name = "rust_web_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
futures = { version = "0.3" }
tokio = { version = "1.16", features = ["full"] }
